--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                         <li>Learning Japanese asides from Hirigana/Katakana</li>
                         <li>Weight Loss</li>
                         <li>Digital Art</li>
-                        <li>Video Games <br> <span>(and anime)</span></li>
+                        <li>Video Games <br> <span></span></li>
                         <li>The Thought of Grad School</li>
                     </ul>
                 </div>
